[gd_scene load_steps=8 format=2]

[ext_resource path="res://Bowser.gd" type="Script" id=1]
[ext_resource path="res://Assets/Character Assets/BowserW1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Character Assets/Bowser_Down.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "go_down",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.375, 15 )

[sub_resource type="Animation" id=4]
resource_name = "Crecer"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Nueva_Animacion"
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}

[node name="Bowser" type="KinematicBody2D"]
scale = Vector2( 1.2, 1.2 )
collision_mask = 2
script = ExtResource( 1 )

[node name="Bowser_Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.875, 0.805 )
frames = SubResource( 1 )

[node name="Bowser_Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.375, 4 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crecer = SubResource( 4 )
anims/Nueva_Animacion = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayerr_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
